style: update CSS and contact form
- Add custom styling updates
- Enhance contact form script

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,10 @@
+/* Hide default WordPress header and navigation for seamless integration */
+header.wp-block-site-header,
+.wp-block-navigation,
+.wp-block-site-title,
+.wp-block-site-logo {
+    display: none !important;
+}
 /* 
     Document   : style
     Created on : 20 Jul, 2013, 3:58:03 PM
